--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <tr>
                 <td>Github Pages Deployment</td>
                 <td>
-                    <a href="https://github.com/abhishek00713/abhishek00713.github.io/blob/master/index.html">
+                    <a href="https://github.com/abhishek00713/abhishek00713.github.io">
                         Github Pages Deployment - Code</a>
                     
                 </td>
