update table success

--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
                 </td>
             </tr>
             <tr>
-                <td>Design 1 1A-home-search</td>
+                <td>Design 1:1A-home-search</td>
                 <td>
                     <a href="https://github.com/abhishek00713/abhishek00713.github.io/tree/master/1A-home-search">
-                        Card_UI Design- Code</a>
+                        Design 1: 1A-home-search- Code</a>
                     
                 </td>
                 <td>
                     <a href="./1A-home-search/index.html">
-                        Card_UI Design - Demo</a>
+                        Design 1: 1A-home-search - Demo</a>
                     
                 </td>
             </tr>
