--- a/JS_Helix/index.html
+++ b/JS_Helix/index.html
@@ -16,7 +16,7 @@
     </div>
 
     <script src="js/circle.js"></script>
-    <script src="js/Helix.js"></script>
+    <script src="js/helix.js"></script>
 </body>
 
 </html>
