--- a/JS_Exercise 8/index.html
+++ b/JS_Exercise 8/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     
-    <script src="assignment_8.js"></script>
+    <!-- <script src="assignment_8.js"></script> -->
+    <script src="second_assignment_8.js"></script>
 </body>
 </html>
