--- a/Pokemon Story/index.html
+++ b/Pokemon Story/index.html
@@ -17,6 +17,7 @@
         <script src="js/firstWorldFunctions.js"></script>
         <script src="js/first_room.js"></script>
         <script src="js/second_room.js"></script>
+        <script src="js/room_4.js"></script>
         <script src="js/side_character.js"></script>
         <script src="js/proffessor_room.js"></script>
         <script src="js/first_room_function.js"></script>
