pokemon catching success

--- a/Pokemon Story/index.html
+++ b/Pokemon Story/index.html
@@ -14,10 +14,19 @@
         </canvas>
         <script src="js/Constants.js"></script>
         <script src="js/first_world.js"></script>
+        <script src="js/pokemon.js"></script>
         <script src="js/firstWorldFunctions.js"></script>
         <script src="js/first_room.js"></script>
+        <script src="js/city_room_one.js"></script>
+        <script src="js/city_room_two.js"></script>
+        <script src="js/city_room_three.js"></script>
+        <script src="js/city_one.js"></script>
+        
+        <script src="js/pokeball.js"></script>
         <script src="js/second_room.js"></script>
         <script src="js/room_4.js"></script>
+        <script src="js/room_four.js"></script>
+        <script src="js/route.js"></script>
         <script src="js/side_character.js"></script>
         <script src="js/proffessor_room.js"></script>
         <script src="js/first_room_function.js"></script>
