--- a/Pokemon Story/index.html
+++ b/Pokemon Story/index.html
@@ -9,8 +9,11 @@
         
     </head>
     <body>
-        <canvas id ="pokemon_container" width="620" height="620">
+        <audio preload='auto' controls='none' src='audio/021-Field04.mid' id='audio1'>
 
+        </audio>
+        <canvas id ="pokemon_container" width="620" height="620">
+            
         </canvas>
         <script src="js/Constants.js"></script>
         <script src="js/first_world.js"></script>
@@ -29,8 +32,8 @@
         <script src="js/route.js"></script>
         <script src="js/side_character.js"></script>
         <script src="js/proffessor_room.js"></script>
-        <script src="js/first_room_function.js"></script>
         <script src="js/mart.js"></script>
+        <script src="js/sound.js"></script>
         <script src="js/ImageManager.js"></script>
         <script src="js/main_character.js"></script>
         <script src="js/main.js"></script>
