--- a/Pokemon Story/index.html
+++ b/Pokemon Story/index.html
@@ -16,7 +16,7 @@
         </canvas>
         <script src="js/keyboard.js"></script>
         <script src="js/sound.js"></script>
-        <script src="js/constants.js"></script>
+        <script src="js/constant.js"></script>
         <script src="js/tilemaps/first_world.js"></script>
         <script src="js/pokemon.js"></script>
         
